Fix overlay covered by navbar issue

--- a/src/components/Overlay.scss
+++ b/src/components/Overlay.scss
@@ -2,6 +2,7 @@
 
 .overlay {
     position: fixed;
+    z-index: 3;
     inset: 0;
     display: none;
     overflow-y: scroll;
